# dfm-menu-manager

./: .gitignore  CMakeLists.txt  LICENSE  README.md
asset/: demo.conf  dfm-menu-manager.desktop
debian/: README.source  changelog  control  copyright  rules
plans/: project-spec.md
qml/: main.qml
qml/components/: DButton.qml  DCollapsibleGroup.qml  DFileTypeSelectorDialog.qml  DGlobalPrompt.qml  DMultiLinePropertyField.qml  DMultiSelectComboBox.qml  DPropertyField.qml  DRadioButton.qml  DSpinBox.qml
qml/delegates/: FileDelegate.qml  TreeDelegate.qml
qml/js/: Utils.js
qml/styles/: Style.qml
src/: main.cpp
src/core/: config_parser.cpp  config_parser.h  config_writer.cpp  config_writer.h  file_type_manager.cpp  file_watcher.cpp  file_watcher.h  menu_manager.cpp  menu_manager.h
src/models/: menu_action_item.cpp  menu_action_item.h  menu_file_model.cpp  menu_file_model.h  menu_tree_model.cpp  menu_tree_model.h
src/resources/: i18n.qrc  qml.qrc
src/utils/: config_helper.cpp  config_helper.h  constants.h  file_dialog_helper.cpp  file_dialog_helper.h  file_utils.cpp  file_utils.h  logger.cpp  logger.h  window_manager.cpp  window_manager.h
tests/: CMakeLists.txt
translations/: dfm-menu-manager_en_US.ts  dfm-menu-manager_zh_CN.ts
